0 out for mobile to prevent cut off

--- a/css/global-style.css
+++ b/css/global-style.css
@@ -4739,7 +4739,7 @@ blockquote.transparent-50:before, blockquote.transparent-50:after {
   }
 
   blockquote.image-quote {
-    left: -1.9em;
+    left: 0;
     top: -1.1em;
   }
 
